@@ -1,3 +1,7 @@
+2012-07-13  Doug Evans  <dje@google.com>
+
+	* filename_cmp.c (filename_hash, filename_eq): New functions.
+
 2012-06-29  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* copying-lib.texi (Library Copying): Don't use @heading inside
